<resources>
    <string name="app_name">DTApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Repeat Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_workplace">Workplace</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_mainfield">Main Field</string>
    <string name="hint_concernfield">Concern Field</string>
    <string name="hint_avatar">Avatar</string>
    <string name="hint_type">Type</string>


    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_register">REGISTER</string>

    <string name="name">Fullname</string>
    <string name="taoCLS">Tạo Ca Lâm Sàng Mới</string>
    <string name="titleCLS">Tiêu Đề Ca Lâm Sàng</string>
    <string name="tagBan">Thông Báo Cho Bạn Bè</string>
    <string name="motaCLS">Mô Tả Chi Tiết Ca Lâm Sàng</string>
    <string name="linhvucCLS">Lĩnh Vực Của Ca Lâm Sàng</string>
    <string name="chonAnhCLS">Chọn Ảnh</string>
</resources>
