<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_step2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taoCLS"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:id="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleCLS"
                android:textSize="20dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:id="@+id/textView2" />


            <EditText
                android:id="@+id/ed1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please Edit"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linhvucCLS"
                android:textSize="20dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold" />

            <Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/spinner_linhvucCLS"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tagBan"
                android:textSize="20dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"/>
            <MultiAutoCompleteTextView
                android:id="@+id/ed2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tvTemp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>